--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Bob the Builder</span>
+    <span class="site-heading-upper mb-3">Bob the Builder</span>
     <span class="site-heading-lower">Stop&Lock</span>
   </h1>
 
