--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Business Casual - Start Bootstrap Theme</title>
+  <title>Bob the Builder</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,9 +20,9 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
-
-
 </head>
+
+
 
 <body>
 
@@ -34,7 +34,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Stop&Lock</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,10 +49,13 @@
             <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded" href="making.html">The Making</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="website.html">Website</a>
           </li>
         </ul>
       </div>
@@ -71,7 +74,7 @@
           <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+            <a class="btn btn-primary btn-xl" href="#">about the product?</a>
           </div>
         </div>
       </div>
@@ -97,36 +100,27 @@
 
 
 
-<footer class="footer text-faded text-center py-5">
 
+<footer class="footer py-5">
 
-  <div class="col-md-4">
-    <b>Customer service:</b> <br />
-    Phone: +1 129 209 291<br />
-    E-mail: <a href="mailto:support@mysite.com">support@mysite.com</a><br />
-    <br /><br />
-    <b>Headquarter:</b><br />
-    Company Inc, <br />
-    Las vegas street 201<br />
-    55001 Nevada, USA<br />
-    Phone: +1 145 000 101<br />
-    <a href="mailto:usa@mysite.com">usa@mysite.com</a><br />
-
-
-    <br /><br />
-    <b>Hong kong:</b><br />
-    Company HK Litd, <br />
-    25/F.168 Queen<br />
-    Wan Chai District, Hong Kong<br />
-    Phone: +852 129 209 291<br />
-    <a href="mailto:hk@mysite.com">hk@mysite.com</a><br />
-
-  </div>
-    <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+  <div class="cta-inner text-center rounded py-2" style="color:white">
+    <h2 class="section-heading  mb-2">
+      <span class="section-heading-upper">Interested?</span>
+      <span class="section-heading-lower">Contact Us</span>
+    </h2>
+        <p class="address mb-2">
+            Imperial College London Hackspace White City (get exact address) |
+        <a href=""> contact@bobthebuilder.ac.uk</a>   |   020 1234 5678
+    </p>
+    <div class="intro-button mx-auto">
+      <a class="btn btn-primary btn-xl" href="contact.html">Get in Touch!</a>
     </div>
-  </footer>
+  </div>
 
+  <div class="container">
+      <p class="m-0 small" align="center">Copyright &copy; Mina 2019</p>
+  </div>
+</footer>
 
 
 
