--- a/making.html
+++ b/making.html
@@ -25,8 +25,8 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-    <span class="site-heading-lower">Business Casual</span>
+    <span class="site-heading-upper mb-3">Bob the Builder</span>
+    <span class="site-heading-lower">Stop&Lock</span>
   </h1>
 
   <!-- Navigation -->
@@ -47,10 +47,13 @@
             <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
           </li>
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <a class="nav-link text-uppercase text-expanded" href="making.html">The Making</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="website.html">Website</a>
           </li>
         </ul>
       </div>
@@ -120,9 +123,24 @@
     </div>
   </section>
 
-  <footer class="footer text-faded text-center py-5">
+  <footer class="footer py-5">
+
+    <div class="cta-inner text-center rounded py-2" style="color:white">
+      <h2 class="section-heading  mb-2">
+        <span class="section-heading-upper">Interested?</span>
+        <span class="section-heading-lower">Contact Us</span>
+      </h2>
+          <p class="address mb-2">
+              Imperial College London Hackspace White City (get exact address) |
+          <a href=""> contact@bobthebuilder.ac.uk</a>   |   020 1234 5678
+      </p>
+      <div class="intro-button mx-auto">
+        <a class="btn btn-primary btn-xl" href="contact.html">Get in Touch!</a>
+      </div>
+    </div>
+
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+        <p class="m-0 small" align="center">Copyright &copy; Mina 2019</p>
     </div>
   </footer>
 
