about page format done, team page in progress

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Business Casual - Start Bootstrap Theme</title>
+  <title>About Us</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,156 @@
 
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
+
+
+
+  <!--- https://bootsnipp.com/snippets/eKpz8 ---------->
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!--- Include the above in your HEAD tag ---------->
+
+<style>
+.pb-100 {
+	padding-bottom: 100px;
+}
+.pt-100 {
+	padding-top: 100px;
+}
+.section-title {
+	margin-bottom: 110px;
+	position: relative;
+}
+.section-title h3 {
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 30px;
+}
+
+.section-title:before {
+	position: absolute;
+	content: "";
+	width: 110px;
+	height: 1px;
+	background-color: #635CDB;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%) rotate(90deg);
+	        transform: translate(-50%, -50%) rotate(90deg);
+	top: 50%;
+}
+.section-title:after {
+	position: absolute;
+	content: "";
+	width: 80px;
+	height: 1px;
+	background-color: #635CDB;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	bottom: -20px;
+}
+.section-title h3 span {
+	display: block;
+	font-size: 15px;
+	text-transform: lowercase;
+	font-weight: 400;
+	margin-bottom: 10px;
+}
+.section-title p {
+	margin-top: 5px;
+}
+.team-hover {
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	color: #fff;
+	visibility: hidden;
+	opacity: 0;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	-webkit-transition: .5s;
+	transition: .5s
+}
+
+.single-team img {
+	width: 100%;
+}
+
+.team-hover h4 {
+	text-transform: capitalize;
+	font-size: 20px;
+	font-weight: 600;
+}
+
+.team-hover h4 span {
+	display: block;
+	font-size: 13px;
+	font-weight: 400;
+	margin-top: 5px;
+}
+
+.team-hover ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-top: 15px;
+}
+
+.team-hover ul li {
+	display: inline-block;
+}
+
+.team-hover ul li {
+	background-color: #333;
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	border-radius: 50%;
+	margin: 0 2px;
+	text-align: center
+}
+
+.team-hover ul li a {
+	color: #fff;
+	font-size: 13px;
+	display: block;
+}
+.single-team {
+	position: relative;
+	z-index: 2;
+}
+
+.team-content {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+}
+
+.team-hover:before {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-color: #333;
+	z-index: -1;
+	opacity: .85;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
+}
+
+.single-team:hover .team-hover {
+	visibility: visible;
+	opacity: 1;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+}
+
+</style>
 
 </head>
 
@@ -68,17 +218,97 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-upper">Imperial College Making&Prototyping</span>
+                <span class="section-heading-lower">About Us</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p>about us part 1</p>
+              <p class="mb-0">you can do things like this  <em>italic</em> in this section too </p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+
+
+
+
+  <section class="page-section cta">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+
+
+<!-- TEAM SECTION--->
+<section class="team-area pb-100 pt-100" id="team">
+     <div class="container">
+        <div class="row section-title">
+           <div class="col-md-6 text-right">
+              <h3><span>who we are?</span> creative team</h3>
+           </div>
+           <div class="col-md-6">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.d </p>
+           </div>
+        </div>
+        <div class="row">
+           <div class="col-md-4">
+              <div class="single-team">
+                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/1.jpg" alt="">
+                 <div class="team-hover">
+                    <div class="team-content">
+                       <h4>john doe <span>web developer</span></h4>
+                       <ul>
+                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                       </ul>
+                    </div>
+                 </div>
+              </div>
+           </div>
+           <div class="col-md-4">
+              <div class="single-team">
+                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/2.jpg" alt="">
+                 <div class="team-hover">
+                    <div class="team-content">
+                       <h4>john doe <span>web developer</span></h4>
+                       <ul>
+                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                       </ul>
+                    </div>
+                 </div>
+              </div>
+           </div>
+           <div class="col-md-4">
+              <div class="single-team">
+                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/3.jpg" alt="">
+                 <div class="team-hover">
+                    <div class="team-content">
+                       <h4>john doe <span>web developer</span></h4>
+                       <ul>
+                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                       </ul>
+                    </div>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </div>
+  </section>
+
+</div>
+</div>
+</section>
+
+
+
 
   <footer class="footer py-5">
 
