--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
+  <style>
+  html {
+    scroll-behavior: smooth;
+  }
+  </style>
+
 </head>
 
 
@@ -68,29 +74,32 @@
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Fresh Coffee</span>
-            <span class="section-heading-lower">Worth Drinking</span>
+            <span class="section-heading-upper">a simple solution</span>
+            <span class="section-heading-lower"> Quick Lock </span>
           </h2>
-          <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+          <p class="mb-3"> description of product in a few words
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">about the product?</a>
+            <a class="btn btn-primary btn-xl" href="#product">Find out More</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section cta">
+  <section class="page-section cta" id="product">
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Our Promise</span>
-              <span class="section-heading-lower">To You</span>
+              <span class="section-heading-upper">Our Product</span>
+              <span class="section-heading-lower">Stop&Lock</span>
             </h2>
-            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+            <p class="mb-0">Few paragraphs explaining our product <br>
+              paragraph 2 <br>
+              paragraph 3
+            </p>
           </div>
         </div>
       </div>
@@ -100,6 +109,8 @@
 
 
 
+
+<* -----------FOOTER------------*>
 
 <footer class="footer py-5">
 
