4 pictures for team

--- a/about.html
+++ b/about.html
@@ -45,23 +45,23 @@
 	font-size: 30px;
 }
 
-.section-title:before {
+.section-title:before { /*vertical line */
 	position: absolute;
 	content: "";
 	width: 110px;
 	height: 1px;
-	background-color: #635CDB;
+	background-color: rgba(84, 92, 95,0.8);
 	left: 50%;
 	-webkit-transform: translate(-50%, -50%) rotate(90deg);
 	        transform: translate(-50%, -50%) rotate(90deg);
 	top: 50%;
 }
-.section-title:after {
+.section-title:after {  /*horizontal line */
 	position: absolute;
 	content: "";
 	width: 80px;
 	height: 1px;
-	background-color: #635CDB;
+	background-color: rgba(84, 92, 95,0.8);
 	left: 50%;
 	-webkit-transform: translateX(-50%);
 	        transform: translateX(-50%);
@@ -233,13 +233,11 @@
 
 
 
-
+<!-- TEAM SECTION--->
   <section class="page-section cta">
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
 
-
-<!-- TEAM SECTION--->
 <section class="team-area pb-100 pt-100" id="team">
      <div class="container">
         <div class="row section-title">
@@ -247,13 +245,13 @@
               <h3><span>who we are?</span> creative team</h3>
            </div>
            <div class="col-md-6">
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.d </p>
+              <p> add some explanation about the team </p>
            </div>
         </div>
         <div class="row">
-           <div class="col-md-4">
+           <div class="col-md-3">
               <div class="single-team">
-                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/1.jpg" alt="">
+                 <img src="img/lollo.jpg" alt="">
                  <div class="team-hover">
                     <div class="team-content">
                        <h4>john doe <span>web developer</span></h4>
@@ -267,9 +265,9 @@
                  </div>
               </div>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-3">
               <div class="single-team">
-                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/2.jpg" alt="">
+                 <img src="img/jake.jpg" alt="">
                  <div class="team-hover">
                     <div class="team-content">
                        <h4>john doe <span>web developer</span></h4>
@@ -283,9 +281,25 @@
                  </div>
               </div>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-3">
               <div class="single-team">
-                 <img src="http://infinityflamesoft.com/html/halim-preview/assets/img/team/3.jpg" alt="">
+                 <img src="img/priyen.jpg" alt="">
+                 <div class="team-hover">
+                    <div class="team-content">
+                       <h4>john doe <span>web developer</span></h4>
+                       <ul>
+                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                       </ul>
+                    </div>
+                 </div>
+              </div>
+           </div>
+           <div class="col-md-3">
+              <div class="single-team">
+                 <img src="img/mina.png" alt="">
                  <div class="team-hover">
                     <div class="team-content">
                        <h4>john doe <span>web developer</span></h4>
