To edit team roles

--- a/about.html
+++ b/about.html
@@ -248,21 +248,37 @@
               <p> add some explanation about the team </p>
            </div>
         </div>
-        <div class="row">
+        <div class="row" align="center">
+           <div class="col-md-3">
+              <div class="single-team">
+                 <img src="img/priyen.jpg" alt="">
+                 <div class="team-hover">
+                    <div class="team-content">
+                       <h4>Priyen Morjaria <span>Lead Prototyper</span></h4>
+                       <ul>
+                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                       </ul>
+                    </div>
+                 </div>
+                 <h4>Priyen Morjaria <span>Lead Prototyper</span></h4>
+              </div>
+           </div>
            <div class="col-md-3">
               <div class="single-team">
                  <img src="img/lollo.jpg" alt="">
                  <div class="team-hover">
                     <div class="team-content">
-                       <h4>john doe <span>web developer</span></h4>
+                       <h4>Lorenzo Bergamaschi <span>Lead Mechanical Engineer</span></h4>
                        <ul>
                           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                        </ul>
                     </div>
                  </div>
+                 <h4>Lorenzo Bergamaschi <span>Lead Mechanical Engineer</span></h4>
               </div>
            </div>
            <div class="col-md-3">
@@ -270,31 +286,15 @@
                  <img src="img/jake.jpg" alt="">
                  <div class="team-hover">
                     <div class="team-content">
-                       <h4>john doe <span>web developer</span></h4>
+                       <h4>Jake Reynolds <span>Lead Project Manager</span></h4>
                        <ul>
                           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                        </ul>
                     </div>
                  </div>
-              </div>
-           </div>
-           <div class="col-md-3">
-              <div class="single-team">
-                 <img src="img/priyen.jpg" alt="">
-                 <div class="team-hover">
-                    <div class="team-content">
-                       <h4>john doe <span>web developer</span></h4>
-                       <ul>
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                       </ul>
-                    </div>
-                 </div>
+                 <h4>Jake Reynolds <span>Lead Project Manager</span></h4>
               </div>
            </div>
            <div class="col-md-3">
@@ -302,15 +302,15 @@
                  <img src="img/mina.png" alt="">
                  <div class="team-hover">
                     <div class="team-content">
-                       <h4>john doe <span>web developer</span></h4>
+                       <h4>Mina Oba<span>Lead Designer</span></h4>
                        <ul>
                           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                        </ul>
                     </div>
                  </div>
+                 <h4>Mina Oba<span>Lead Designer</span></h4>
               </div>
            </div>
         </div>
