--- a/about.html
+++ b/about.html
@@ -256,9 +256,8 @@
                     <div class="team-content">
                        <h4>Priyen Morjaria <span>Lead Prototyper</span></h4>
                        <ul>
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                         <li><a href="#"><img src="img/linkedin.jpg" alt=""></a></li>
+                         <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
@@ -272,9 +271,8 @@
                     <div class="team-content">
                        <h4>Lorenzo Bergamaschi <span>Lead Mechanical Engineer</span></h4>
                        <ul>
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                         <li><a href="#"><img src="img/linkedin.jpg" alt=""></a></li>
+                         <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
@@ -288,9 +286,8 @@
                     <div class="team-content">
                        <h4>Jake Reynolds <span>Lead Project Manager</span></h4>
                        <ul>
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                         <li><a href="#"><img src="img/linkedin.jpg" alt=""></a></li>
+                         <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
@@ -304,9 +301,8 @@
                     <div class="team-content">
                        <h4>Mina Oba<span>Lead Designer</span></h4>
                        <ul>
-                          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                          <li><a href="#"><img src="img/linkedin.png" alt=""></a></li>
+                          <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
