--- a/about.html
+++ b/about.html
@@ -301,8 +301,8 @@
                     <div class="team-content">
                        <h4>Mina Oba<span>Lead Designer</span></h4>
                        <ul>
-                          <li><a href="#"><img src="img/linkedin.png" alt=""></a></li>
-                          <li><a href="#"><img src="img/website.png" alt=""></a></li>
+                         <li><a href="#"><img src="img/linkedin.jpg" alt=""></a></li>
+                         <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
