--- a/website.html
+++ b/website.html
@@ -60,6 +60,33 @@
     </div>
   </nav>
 
+  <section class="page-section cta" id="web">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">section 7</span>
+              <span class="section-heading-lower">good website: describe</span>
+            </h2>
+            <p class="mb-0">a) what you feel makes a good website <br>
+              b) what is accessibility and what considerations you should make for it? Look up what you should do for the visually impaired or color blind (audio option etc)<br>
+              c) what is GDPR and wjat considerations shoudld be made for privacy of your website <br>
+              d) what marketing steps would you take to drive people to look at your website <br>
+              e) the next steps you would take given more time for your product website - how would you expand and what steps you would take i.e. e-commerce, etc
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
   <section class="page-section">
     <div class="container">
       <div class="product-item">
