--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,6 @@
                         </div>
 
 
-
                         <div class="col-md-5">
                             <h4><strong>Get in Touch</strong></h4>
                           <form>
@@ -137,7 +136,7 @@
                               <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
                             </div>
                             <button class="intro-button mx-auto" type="submit" name="button">
-                                <i class="btn btn-primary btn-xl" > Submit </i>
+                                <a class="btn btn-primary btn-xl" href="http://corndog.io/">Submit</a>
                             </button>
 
 
