--- a/website.html
+++ b/website.html
@@ -22,7 +22,7 @@
 
   <!-- favicon  -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  
+
 </head>
 
 <body>
@@ -161,7 +161,7 @@
         <span class="section-heading-lower">Contact Us</span>
       </h2>
           <p class="address mb-2">
-              Imperial College London Hackspace White City (get exact address) |
+              Imperial College London Advanced Hackspace White City Campus | Stadium House, Door A, 68 Wood Ln, London W12 7TA |
           <a href=""> contact@bobthebuilder.ac.uk</a>   |   020 1234 5678
       </p>
       <div class="intro-button mx-auto">
