--- a/contact.html
+++ b/contact.html
@@ -136,17 +136,14 @@
                               <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
                             </div>
                             <button class="intro-button mx-auto" type="submit" name="button">
-                                <a class="btn btn-primary btn-xl" href="http://corndog.io/">Submit</a>
+                                <a class="btn btn-primary btn-xl" href="http://www.koalastothemax.com/">Submit</a>
+                                <!--"http://corndog.io/"-->
                             </button>
-
-
                           </form>
                         </div>
                       </div>
                     </div>
                   </section>
-
-
             </div>
           </div>
         </div>
