--- a/contact.html
+++ b/contact.html
@@ -118,11 +118,13 @@
                   	<div class="row">
                   	  <div class="col-md-7">
                           <iframe src="https://maps.google.com/maps?q=Stadium%20House%2C%20Door%20A%2C%2068%20Wood%20Ln%2C%20London%20W12%207TA&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          <h6> Scroll down to contact an individual member of the team</h6>
                         </div>
 
 
                         <div class="col-md-5">
                             <h4><strong>Get in Touch</strong></h4>
+                            <h6>By sending this form I consent for this website to retain data</h6>
                           <form>
                             <div class="form-group">
                               <input type="text" class="form-control" name="" value="" placeholder="Name">
